# taproom

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  taproom.example.toml
.github/workflows/: ci.yml
src/taproom/: __init__.py  catalog.py  models.py  packages.py  server.py  sources.py
tests/: cli.test.mjs  test_catalog.py
