[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taproom"
version = "0.1.0"
description = "Discover and retrieve portable agent skills and MCP servers."
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.4,<3.5",
]

[project.scripts]
taproom-server = "taproom.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/taproom"]

